[gd_scene load_steps=20 format=2]

[ext_resource path="res://Juego/Estacion/AreaAtraccion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Estacion/parte_nave_enemiga1.png" type="Texture" id=2]
[ext_resource path="res://Juego/Estacion/parte_nave_enemiga2.png" type="Texture" id=3]
[ext_resource path="res://Juego/Estacion/parte_nave_enemiga3.png" type="Texture" id=4]
[ext_resource path="res://Juego/Estacion/parte_nave_enemiga4.png" type="Texture" id=5]
[ext_resource path="res://Juego/Estacion/BaseEnemiga.gd" type="Script" id=6]
[ext_resource path="res://Juego/Estacion/AreaColision.gd" type="Script" id=7]
[ext_resource path="res://Juego/Naves/Enemigos/EnemigoOrbital.tscn" type="PackedScene" id=8]
[ext_resource path="res://Juego/Estacion/PosicionesSpawn.gd" type="Script" id=9]
[ext_resource path="res://Juego/Estacion/RutasEnemigos/RutaEnemigo.tscn" type="PackedScene" id=10]
[ext_resource path="res://Juego/Estacion/RutasEnemigos/RutaEnemigo2.tscn" type="PackedScene" id=11]
[ext_resource path="res://Juego/UI/HUD/BarraSalud.tscn" type="PackedScene" id=12]

[sub_resource type="CapsuleShape2D" id=5]
radius = 38.0
height = 492.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 41.0
height = 378.0

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "rotacion_anti_horario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "rotacion_horario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.764706, 0.113725, 0.113725, 1 )
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.164706, 0.341176, 0.00392157, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.137255, 0.137255, 0.137255, 1 )
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.34902, 0.0117647, 0.0117647, 1 )
border_blend = true

[node name="BaseEnemiga" type="Node2D" groups=["minimap"]]
script = ExtResource( 6 )
hitpoints = 40.0
orbital = ExtResource( 8 )
numero_orbitales = 5
intervalo_spawn = 2.0
rutas = [ ExtResource( 10 ), ExtResource( 11 ) ]

[node name="Sprites" type="Node2D" parent="."]

[node name="Sprite1" type="Sprite" parent="Sprites"]
position = Vector2( 117, 64 )
rotation = -3.14159
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
position = Vector2( -115, 65 )
rotation = 3.14159
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="Sprites"]
position = Vector2( -3.99998, -88 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="Sprites"]
position = Vector2( 0, 152 )
rotation = 1.5708
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="Sprites"]
position = Vector2( -114, -131 )
rotation = -1.5708
texture = ExtResource( 5 )

[node name="Sprite6" type="Sprite" parent="Sprites"]
position = Vector2( 116, -131 )
rotation = -1.5708
texture = ExtResource( 5 )

[node name="AreaColision" type="Area2D" parent="."]
z_index = 40
z_as_relative = false
collision_layer = 32
collision_mask = 11
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 0, -7 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 117, 14 )
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( -114, 15 )
shape = SubResource( 6 )

[node name="AreaAtraccion" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -2, -1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 1 )
anims/rotacion_anti_horario = SubResource( 4 )
anims/rotacion_horario = SubResource( 2 )

[node name="Impactos" type="AudioStreamPlayer2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="PosicionesSpawn" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Norte" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 0, -500 )

[node name="Sur" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 0, 500 )

[node name="Oeste" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( -500, 0 )

[node name="Este" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 500, 0 )

[node name="TimerSpawnerEnemigos" type="Timer" parent="."]

[node name="BarraSalud" parent="." instance=ExtResource( 12 )]
margin_left = -211.0
margin_top = -435.0
margin_right = 201.0
margin_bottom = -390.0
rect_rotation = 0.0
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
siempre_visible = true

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="TimerSpawnerEnemigos" to="." method="_on_TimerSpawnerEnemigos_timeout"]
